Fix title on rankings page

--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -1,6 +1,6 @@
 <html py:extends="master.xhtml" py:strip="True">
   <py:block name="title">
-    Competitions List
+    Rankings - ${competition.name}
   </py:block>
   <body py:block="body" py:strip="True">
     <?python
