--- a/algobowl/templates/admin/index.xhtml
+++ b/algobowl/templates/admin/index.xhtml
@@ -6,7 +6,7 @@
   </head>
   <body py:block="body" py:strip="True">
     <div class="container">
-      <h1 class="mb-1">${value_of('project_name', 'AlgoBOWL')} Administration</h1>
+      <h1 class="mb-1">${tg.config['branding.name']} Administration</h1>
 
       <h2>Database Object Editor</h2>
       <div class="admin-button-group">
