Fix errors when Competition.problem_statement is NULL
Competition.problem_statement is nullable, but the code which accesses
that field assumed it was not.

Signed-off-by: Jack Rosenthal <jack@rosenth.al>

--- a/algobowl/templates/group/verification.xhtml
+++ b/algobowl/templates/group/verification.xhtml
@@ -8,9 +8,14 @@
   <py:if test="group.input is not None">
     <p>
       Note that a solution can be valid even if it is not optimal. Please
-      <a href="${competition.problem_statement.url}" target="_blank">
-        read the problem statement carefully</a> for a specification on the
-      validity of outputs.
+      <py:if test="competition.problem_statement">
+        <a href="${competition.problem_statement.url}" target="_blank">
+          read the problem statement carefully
+        </a>
+      </py:if><py:else>
+        read the problem statement carefully
+      </py:else>
+      for a specification on the validity of outputs.
     </p>
     <p>
       For reference, <a href="${group.input.data.url}">here</a>
