--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -30,6 +30,7 @@
   <script src="${tg.url('/assets/js/jquery-3.3.1.min.js')}"></script>
   <script src="${tg.url('/assets/js/popper.min.js')}"></script>
   <script src="${tg.url('/assets/js/bootstrap.min.js')}"></script>
+  <script src="${tg.url('/assets/js/algobowl.js')}"></script>
 
   <py:block name="head"></py:block>
 </head>
