--- a/algobowl/templates/competition/rankings.xhtml
+++ b/algobowl/templates/competition/rankings.xhtml
@@ -55,6 +55,11 @@ def tooltip_attrs(iput, ent):
           <i class="fas fa-marker fa-fw"></i>
           Grading Table
         </a>
+        <a href="${tg.request.url.partition('?')[0] + '/reverify'}"
+           class="btn btn-info">
+          <i class="fas fa-sync-alt fa-fw"></i>
+          Recompute Ground Truths
+        </a>
       </div>
       <div py:if="open_verification" class="card mt-3 mb-3">
         <div class="card-body">
