Update link to Jack Rosenthal's website

--- a/algobowl/templates/master.xhtml
+++ b/algobowl/templates/master.xhtml
@@ -120,7 +120,7 @@
           </py:else>
           <a href="https://github.com/jackrosenthal/algobowl" target="_blank">
             open source software</a> designed by
-          <a href="http://inside.mines.edu/~jrosenth" target="_blank">
+          <a href="jack.rosenth.al" target="_blank">
             Jack Rosenthal</a> and released under an
           <a href="https://en.wikipedia.org/wiki/MIT_License" target="_blank">
             MIT License</a>.
