tree: rename branding.name to site.branding.name

--- a/algobowl/templates/group/input_upload.xhtml
+++ b/algobowl/templates/group/input_upload.xhtml
@@ -1,7 +1,7 @@
 <div class="input-upload-stage" py:if="competition.input_upload_open">
   <h1>Input Upload</h1>
   <p class="lead">
-    Welcome to ${tg.config['branding.name']}! You will have until
+    Welcome to ${tg.config['site.branding.name']}! You will have until
     <strong>${h.ftime(competition.input_upload_ends)}</strong> to submit
     your input and decide upon a team name.
   </p>
