--- a/algobowl/templates/index.xhtml
+++ b/algobowl/templates/index.xhtml
@@ -5,7 +5,7 @@
   <body py:block="body" py:strip="True">
     <div class="container">
       <div class="jumbotron">
-        <h1 class="display-4">Welcome to ${tg.config['branding.name']}</h1>
+        <h1 class="display-4">Welcome to ${tg.config['site.branding.name']}</h1>
         <p class="lead">Students compete in groups to create the best heuristic to an NP-hard problem.</p>
         <hr />
         <div class="compete-link row">
