--- a/algobowl/templates/index.xhtml
+++ b/algobowl/templates/index.xhtml
@@ -3,122 +3,10 @@
     Home
   </py:block>
   <body py:block="body" py:strip="True">
-    <div class="container">
-      <div class="jumbotron">
-        <h1 class="display-4">Welcome to ${tg.config['site.branding.name']}</h1>
-        <p class="lead">Students compete in groups to create the best heuristic to an NP-hard problem.</p>
-        <hr />
-        <div class="compete-link row">
-          <div class="col-sm text-center">
-            <h4 class="font-weight-light">Are you enrolled?</h4>
-            <a class="btn btn-primary btn-lg" href="${tg.url('/group')}" role="button">
-              <i class="fas fa-users fa-fw fa-lg"></i>
-              Enter the Competition
-            </a>
-          </div>
-          <div class="col-sm text-center">
-            <h4 class="font-weight-light">Came to watch?</h4>
-            <a class="btn btn-primary btn-lg" href="${tg.url('/competition')}" role="button">
-              <i class="fas fa-trophy fa-fw fa-lg"></i>
-              View the Leaderboards
-            </a>
-          </div>
-        </div>
-      </div>
-      <h1>How it Works</h1>
-      <p>
-        Students are placed in groups and receive an NP-hard problem. They
-        are asked to design a good heuristic to the problem, create an
-        input to the problem, and a program which, given an input and output,
-        will verify if the output is a valid solution to the input.
-      </p>
-      <div class="row">
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 1: Input Upload
-              </h5>
-              <i class="fas fa-file-upload fa-fw fa-4x fa-pull-left"></i>
-              <p class="card-text">
-                Groups upload their inputs to the problem and select a team name.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 2: Output Upload
-              </h5>
-              <p class="card-text">
-                <i class="fas fa-cogs fa-fw fa-4x fa-pull-left"></i>
-                Groups run all inputs on their solution program and upload
-                their outputs to the site.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 3: Verification
-              </h5>
-              <p class="card-text">
-                <i class="fas fa-check fa-fw fa-4x fa-pull-left"></i>
-                Groups verify that each solution to their input from all other
-                groups is valid.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="row mt-3">
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 4: Resolution
-              </h5>
-              <p class="card-text">
-                <i class="fas fa-sad-tear fa-fw fa-4x fa-pull-left"></i>
-                Groups with rejections may upload new outputs for
-                a penalty, or protest rejections.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 5: Open Verification
-              </h5>
-              <p class="card-text">
-                <i class="fas fa-check-double fa-fw fa-4x fa-pull-left"></i>
-                All outputs for all inputs become available, and teams may
-                protest any verification.
-              </p>
-            </div>
-          </div>
-        </div>
-        <div class="col-md">
-          <div class="card">
-            <div class="card-body">
-              <h5 class="card-title">
-                Stage 6: Evaluation
-              </h5>
-              <p class="card-text">
-                <i class="fas fa-sliders-h fa-fw fa-4x fa-pull-left"></i>
-                Everyone evaluates their teammates effort to be considered
-                in their grade.
-              </p>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+    <py:if test="asbool(tg.config['site.edu'])">
+      <py:include href="algobowl.templates.edu_landing" />
+    </py:if><py:else>
+      <py:include href="algobowl.templates.nonedu_landing" />
+    </py:else>
   </body>
 </html>
