controllers/group: filter listing to only active groups

--- a/algobowl/templates/group/select.xhtml
+++ b/algobowl/templates/group/select.xhtml
@@ -21,8 +21,8 @@
       </py:if><py:else>
         <h1>No Groups</h1>
         <p>
-          You are not a member of any groups. Please contact your course
-          instructor if you believe this to be a mistake.
+          You are not a member of any active groups. Please contact
+          your course instructor if you believe this to be a mistake.
         </p>
       </py:else>
     </div>
