--- a/algobowl/templates/competition/ov.xhtml
+++ b/algobowl/templates/competition/ov.xhtml
@@ -10,7 +10,7 @@
         <a href="${tg.url('/competition/{}'.format(competition.id))}">Return to Leaderboard</a>
       </p>
       <table class="table table-striped">
-        <tr>
+        <tr py:if="show_input_downloads">
           <th>Input File</th>
           <td>
             <a href="${output.input.data.url}">
