resolution: support uploading when nothing was uploaded during output upload

--- a/algobowl/templates/group/resolution.xhtml
+++ b/algobowl/templates/group/resolution.xhtml
@@ -92,6 +92,33 @@
           </py:if>
         </td>
       </tr>
+      <!-- unsubmitted outputs -->
+      <tr py:for="g in competition.groups">
+        <py:if test="g.input.id not in submitted_outputs">
+          <td>
+            <a href="${g.input.data.url}">
+              <tt py:content="g.input.data.filename" />
+            </a>
+          </td>
+          <td></td>
+          <td>
+            <em>Nothing submitted</em>
+          </td>
+          <td>
+            <input type="file"
+                   class="hidden-uploader"
+                   data-togroup="${g.id}"
+                   style="position: fixed; top: -100em"
+                   id="file-upload-not-submitted-${g.id}" />
+            <button class="btn btn-info upload-new"
+                    id="upload-not-submitted-${g.id}"
+                    data-output="not-submitted-${g.id}">
+              <i class="fas fa-file-upload fa-fw"></i>
+              Upload Output
+            </button>
+          </td>
+        </py:if>
+      </tr>
     </tbody>
   </table>
   <script type="text/javascript" src="${tg.url('/assets/js/resolution.js')}"></script>
