Allow admin user to switch stages

--- a/algobowl/templates/group/evaluation.xhtml
+++ b/algobowl/templates/group/evaluation.xhtml
@@ -1,4 +1,4 @@
-<div class="input-upload-stage" py:if="competition.evaluation_open">
+<div class="input-upload-stage" py:if="stage == 'evaluation'">
 <?python
 from itertools import cycle
 pb_color = cycle(
