--- a/algobowl/templates/group/input_upload.xhtml
+++ b/algobowl/templates/group/input_upload.xhtml
@@ -1,4 +1,4 @@
-<div class="input-upload-stage" py:if="competition.input_upload_open">
+<div class="input-upload-stage" py:if="stage == 'input_upload'">
   <h1>Input Upload</h1>
   <p class="lead">
     Welcome to ${tg.config['site.branding.name']}! You will have until
