--- a/algobowl/templates/group/output_upload.xhtml
+++ b/algobowl/templates/group/output_upload.xhtml
@@ -1,4 +1,4 @@
-<div class="output-upload-stage" py:if="competition.output_upload_open">
+<div class="output-upload-stage" py:if="stage == 'output_upload'">
   <h1>Output Upload</h1>
   <p class="lead">
     Download the inputs from the other teams and run them on your program.
