--- a/algobowl/templates/group/resolution.xhtml
+++ b/algobowl/templates/group/resolution.xhtml
@@ -1,4 +1,4 @@
-<div class="resolution-stage" py:if="competition.resolution_open">
+<div class="resolution-stage" py:if="stage == 'resolution'">
   <?python from algobowl.model import VerificationStatus ?>
   <h1>Resolution</h1>
   <p class="lead">
