--- a/algobowl/templates/group/verification.xhtml
+++ b/algobowl/templates/group/verification.xhtml
@@ -1,4 +1,4 @@
-<div class="verification-stage" py:if="competition.verification_open">
+<div class="verification-stage" py:if="stage == 'verification'">
   <?python from algobowl.model import VerificationStatus ?>
   <h1>Verification</h1>
   <p class="lead">
